<resources>
    <string name="app_name">Friendly POS</string>
    <string name="title_home">Inicio</string>
    <string name="title_products">Productos</string>
    <string name="title_inventory">Inventorio</string>
    <string name="title_payments">Pagos</string>
    <string name="title_history">Historial</string>
    <string name="title_sales_calc">Nueva Venta</string>
    <string name="title_customers">Clientes</string>
    <string name="title_reports">Reportes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="icon_description">Ícono de la funcionalidad</string>
    <string name="title_sales">Ventas</string>
    <string name="back">Atrás</string>
    <string name="backspace">Retroceso</string>
    <string name="edit_document">Editar documento</string>
    <string name="cash">Efectivo</string>
    <string name="next">Siguiente</string>
    <string name="credit">Crédito</string>
    <string name="debit">Débito</string>
    <string name="cart">Canasta</string>
    <string name="settings">Configuración</string>
    <string name="more_options">Más opciones</string>
    <string name="empty_cart">Canasta vacía</string>
    <string name="search_products">Buscar productos</string>
    <string name="subtotal">Subtotal</string>
</resources>