<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Fragmento principal y destino inicial -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="cl.friendlypos.mypos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_sales_calc"
            app:destination="@id/navigation_sales_calc" />

        <action
            android:id="@+id/action_home_to_inventory"
            app:destination="@id/navigation_inventory" />

        <action
            android:id="@+id/action_home_to_customers"
            app:destination="@id/navigation_customers" />

        <action
            android:id="@+id/action_home_to_reports"
            app:destination="@id/navigation_reports" />
    </fragment>

    <!-- Fragments secundarios -->
    <fragment
        android:id="@+id/navigation_sales_calc"
        android:name="cl.friendlypos.mypos.ui.sales.SalesCalculatorFragment"
        android:label="@string/title_sales_calc"
        tools:layout="@layout/screen_sales_calc">

        <action
            android:id="@+id/action_sales_calc_to_home"
            app:destination="@id/navigation_home" />

        <!-- Nueva acción para navegar al carrito -->
        <action
            android:id="@+id/action_sales_calc_to_cart"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="cl.friendlypos.mypos.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="cl.friendlypos.mypos.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        />

    <fragment
        android:id="@+id/navigation_customers"
        android:name="cl.friendlypos.mypos.ui.customers.CustomersFragment"
        android:label="@string/title_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="cl.friendlypos.mypos.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <!-- Fragments de Bottom Navigation -->
    <fragment
        android:id="@+id/navigation_payments"
        android:name="cl.friendlypos.mypos.ui.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="cl.friendlypos.mypos.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="cl.friendlypos.mypos.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Carrito de compras -->
    <fragment
        android:id="@+id/cartFragment"
        android:name="cl.friendlypos.mypos.ui.cart.CartFragment"
        android:label="Carrito"
        tools:layout="@layout/fragment_cart" />

</navigation>